<resources>
    <string name="app_name">AndroidHomework</string>
    <string name="sign_in_screen">Sign-in Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-in</string>
    <string name="to_sign_up_screen">To Sign-up Screen</string>
    <string name="sign_up_screen">Sign-up Screen</string>
    <string name="sign_up">Sign-up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="second_name">Second Name</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_id">Movie ID</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_year">Movie Year</string>
    <string name="id">ID</string>
    <string name="description">Description</string>
    <string name="main_screen">Main Screen</string>
    <string name="adding_screen">Adding Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="input_your_new_phone_number">Input your new phone number</string>
    <string name="change_your_password">Change your password</string>
    <string name="input_your_new_password">Input your new password</string>
    <string name="sign_out">Sign-out</string>
    <string name="adding_movie_screen">Adding Movie Screen</string>
    <string name="add_movie">Add movie</string>
    <string name="submit">Submit Changes</string>
    <string name="delete_movie">Delete movie</string>
    <string name="image_url">Image URL (optional)</string>
    <string name="movie_information_screen">Movie Information Screen</string>
    <string name="average_rating">Average Rating</string>
    <string name="rating">Rating</string>
    <string name="go_back">Go Back</string>
    <string name="delete_user">Delete User</string>
    <string name="invalid_number">INVALID PHONE NUMBER</string>
    <string name="invalid_password">INVALID PASSWORD</string>
    <string name="invalid_email">INVALID EMAIL</string>
    <string name="invalid_name">INVALID NAME</string>
    <string name="invalid_second_name">INVALID SECOND</string>
</resources>